--- a/playbooks/mytomrole/tasks/main.yml
+++ b/playbooks/mytomrole/tasks/main.yml
@@ -3,6 +3,6 @@
 - include_tasks: myjdkinstall.yml
 - include_tasks: mytominstall.yml
 - include_tasks: mytomconfigfile.yml
-- include_tasks: myadminpakages.yml
+- include_tasks: myadminpackages.yml
 - include_tasks: mytomuser.yml
 - include_tasks: mydeployjavaapp.yml
