--- a/playbooks/mytomrole/tasks/mydeployjavaapp.yml
+++ b/playbooks/mytomrole/tasks/mydeployjavaapp.yml
@@ -1,6 +1,6 @@
 ---
 - name: i want to deploy ravi java war file into webapps  
   get_url:
-   url: https://subbudevopss3.s3.amazonaws.com/raviLogin-1.0.war
+   url: https://ravidevops123.s3.amazonaws.com/raviLogin.war
    dest: /usr/share/tomcat/webapps/raviLogin.war
    force_basic_auth: yes
