mytomsubbu.yml is modified

--- a/playbooks/mytomrole/tasks/mytomsubbu.yml
+++ b/playbooks/mytomrole/tasks/mytomsubbu.yml
@@ -1,8 +1,5 @@
---- 
-- 
-  become: true
-  host: appserver
-  roles: 
-    - 
-      role: mytomrole
-      when: "ansible_os_family ==\"RedHat\"
+---
+- host: appserver
+  Become: yes
+  roles:
+    - {role: mytomrole, when: ansible_os_family =="RedHat"}
